--- a/package.json
+++ b/package.json
@@ -14,17 +14,19 @@
   },
   "dependencies": {
     "cross-env": "^5.2.0",
+    "koa": "^2.5.2",
     "nuxt": "^2.0.0",
-    "koa": "^2.5.2"
+    "vue-fa": "^1.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.11.0",
+    "@fortawesome/free-solid-svg-icons": "^5.5.0",
     "babel-eslint": "^8.2.1",
     "eslint": "^5.0.1",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-vue": "^4.0.0",
     "eslint-config-prettier": "^3.1.0",
+    "eslint-loader": "^2.0.0",
     "eslint-plugin-prettier": "2.6.2",
+    "eslint-plugin-vue": "^4.0.0",
+    "nodemon": "^1.11.0",
     "prettier": "1.14.3"
   }
 }
